# trimtab

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/diagrams/: trimtab-data-flow.dot
smartgrammar/: __init__.py  builder.py  cli.py  embedder.py  generator.py  grammar.py  index.py
tests/: conftest.py  test_builder.py  test_cli_new_commands.py  test_cosine_retriever_aux.py  test_db.py  test_db_deprecated_shims.py  test_db_symbols_rules.py  test_engram.py  test_errors.py  test_extract.py  test_generator.py  test_generator_aux_provider.py  test_generator_cycle.py  test_grammar.py  test_hybrid_retriever.py  test_index.py  test_integration.py  test_integration_pipeline.py  test_migration_v04_v05.py  test_ollama_embedder.py  test_rule_shape.py  test_smartgrammar_deprecated.py  test_store_read.py  test_stub_embedder.py  test_trimtab_crud.py  test_trimtab_generate.py  test_trimtab_load_export.py  test_trimtab_search.py  test_trimtab_summary.py  test_walk_stop_on_score.py
trimtab/: __init__.py  builder.py  cli.py  core.py  db.py  embedder.py  engram.py  errors.py  extract.py  generator.py  grammar.py  index.py  retriever.py
trimtab/embedders/: __init__.py  ollama.py
trimtab/migrations/: __init__.py  v04_to_v05.py
typestubs/real_ladybug/: __init__.pyi
