[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "trimtab"
version = "0.4.0"
description = "Context-aware grammar generation with cascading embedding search"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "real-ladybug>=0.15",
    "numpy>=1.24",
    "requests>=2.28",
]

[project.optional-dependencies]
build = ["hdbscan>=0.8"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21"]

[project.scripts]
trimtab = "trimtab.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.pyright]
stubPath = "typestubs"

[tool.pytest.ini_options]
asyncio_mode = "strict"
